--- a/_includes/head.njk
+++ b/_includes/head.njk
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <META NAME="robots" CONTENT="noindex,nofollow">
+
     {% if meta.title | length > 0 %}
         {% set site_title = meta.title %}
     {% elif title | length > 0 %}
